# ashtray

./: LICENSE  README.md  pyproject.toml
ashtray/: cli.py  ui.py
